# driver

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  OAT.xml  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  build.sh  classify_rule.yaml
src/ascend_hal/dmc/device_monitor/lib/hash/: CMakeLists.txt
src/ascend_hal/dmc/prof/mem_prof/: CMakeLists.txt  mem_prof_proc.c
src/ascend_hal/dms/: CMakeLists.txt
src/ascend_hal/dms/board/: CMakeLists.txt  dms_device_info.c  dms_topology.c
src/ascend_hal/dms/chip/dvpp/: CMakeLists.txt
src/ascend_hal/dms/chip/imu/: dms_imu.c
src/ascend_hal/dms/chip/soc/: CMakeLists.txt  dms_soc.c  spod_info.c  spod_info_common.c
src/ascend_hal/dms/chip/ts/: CMakeLists.txt  dms_ts_info.c
src/ascend_hal/dms/common/: dms_user_common.c  dms_user_common.h
src/ascend_hal/dms/drv_devmng/: CMakeLists.txt
src/ascend_hal/dms/drv_devmng/ascend910/: CMakeLists.txt  devdrv_hccl.c  devdrv_manager.c  devdrv_manager_ai_core.c  devdrv_manager_ai_core.h  devdrv_manager_bbox.c  devdrv_manager_bbox.h  devdrv_manager_chip.c  devdrv_manager_chip.h  devdrv_manager_dev_info_api.c  devdrv_manager_fd.c  devdrv_manager_host_pid.c  devdrv_manager_lp.c  devdrv_manager_lp.h  devdrv_manager_resource.c  devdrv_manager_resource.h  devdrv_manager_run_info.c  devdrv_manager_run_info.h  devdrv_manager_system_info.c  devdrv_manager_system_info.h  devdrv_manager_topology.c  devdrv_pcie.c  devdrv_pcie.h  devdrv_shm_comm.h  devmng_common.h
src/ascend_hal/dms/drv_devmng/ascend910/ascd910/: devdrv_info.c
src/ascend_hal/dms/drv_devmng/ascend910/devdrv_dsmi/: devdrv_info.c  devdrv_user_config.c
src/ascend_hal/dms/drv_devmng/common/: CMakeLists.txt
src/ascend_hal/dms/drv_devmng/dc/: CMakeLists.txt  devdrv_vnic_info.c
src/ascend_hal/dms/drv_devmng/feature/host/: ascend910B.cmake  ascend910_95.cmake  ascend950.cmake  module.cmake
src/ascend_hal/dms/drv_devmng/inc/: devmng_cmd_def.h
src/ascend_hal/dms/emmc/: dms_emmc_info.c
src/ascend_hal/dms/fault/: CMakeLists.txt  dms_fault.c  dms_fault.h
src/ascend_hal/dms/feature/host/: ascend910B.cmake  ascend910_95.cmake  module.cmake
src/ascend_hal/dms/hbm/: hbm_ctrl.c
src/ascend_hal/dms/include/: dms_device_info.h  dms_p2p_com.h
src/ascend_hal/dms/log/: CMakeLists.txt  log.c
src/ascend_hal/dms/lpm/: CMakeLists.txt  dms_lpm.c
src/ascend_hal/dms/p2p/: dms_p2p_com.c
src/ascend_hal/dms/pcie/: CMakeLists.txt  dms_pcie_info.c
src/ascend_hal/dms/power/: CMakeLists.txt  dms_power_hotreset.c
src/ascend_hal/dms/time/: dms_time_zone.c
src/ascend_hal/dms/ub/: CMakeLists.txt  dms_ub_info.c
src/ascend_hal/dms/udis/: udis_user.c
src/ascend_hal/dms/vdev/: dms_vdev.c
src/ascend_hal/dpa/apm/: CMakeLists.txt  apm_ioctl.c  apm_ioctl.h  apm_user_master.c  apm_user_master.h  apm_user_res_map.c  apm_user_slave.c  apm_user_slave.h  apm_user_slave_ssid.c  apm_user_slave_status.c  apm_user_slave_status.h
src/ascend_hal/pbl/ubmm/dc/: CMakeLists.txt
src/ascend_hal/svm/v3/: CMakeLists.txt
src/ascend_hal/svm/v3/apbi/: svm_apbi.c  svm_apbi.cmake
src/ascend_hal/svm/v3/api/: svm_api.cmake
src/ascend_hal/svm/v3/api/master/: svm_alloc.c  svm_alloc.h  svm_cpy.c  svm_cpy_host_pool.c  svm_cpy_host_pool.h  svm_get_attr.c  svm_get_transway.c  svm_get_urma_seg.c  svm_host_register.c  svm_ipc.c  svm_ipc.h  svm_madvise.c  svm_master_init.c  svm_master_init.h  svm_mem_ctl.c  svm_mem_info.c  svm_mem_notify.c  svm_mem_repair.c  svm_mem_repair.h  svm_mem_show.c  svm_mem_stats_show.c  svm_mem_stats_show.h  svm_mem_usageinfo.c  svm_pagefault.c  svm_pipeline.c  svm_pipeline.h  svm_prefetch.c  svm_prefetch.h  svm_register.c  svm_register.h  svm_register_access.c  svm_register_only.c  svm_register_pcie_th.c  svm_register_pcie_th.h  svm_set.c  svm_soma.c  svm_va_diag.c  svm_va_diag.h  svm_vmm.c  svm_vmm.h
src/ascend_hal/svm/v3/assign/: svm_assign.cmake
src/ascend_hal/svm/v3/assign/cache_malloc/: cache_allocator.c  cache_allocator.h  cache_init.c  cache_malloc.c  cache_pub.h  cache_recycle_seg.c  cache_recycle_seg.h
src/ascend_hal/svm/v3/assign/gap/: assign_gap.c
src/ascend_hal/svm/v3/assign/gen_allocator/: gen_allocator.c
src/ascend_hal/svm/v3/assign/madvise/: madvise_user.c
src/ascend_hal/svm/v3/assign/madvise_client/: madvise_client.c
src/ascend_hal/svm/v3/assign/malloc_mng/: malloc_mng.c
src/ascend_hal/svm/v3/assign/mms/: mms.c  mms.cmake
src/ascend_hal/svm/v3/assign/mpl/: mpl_user.c
src/ascend_hal/svm/v3/assign/mpl_client/: mpl_client.c
src/ascend_hal/svm/v3/assign/normal_malloc/: normal_malloc.c
src/ascend_hal/svm/v3/assign/pci_adapt/: svm_pci_assign.c
src/ascend_hal/svm/v3/assign/va_allocator/: mga.c  mga.h  va_allocator.c  va_dev_cp_only_allocator.c  va_dev_cp_only_allocator.h  va_dev_dcache_allocator.c  va_dev_dcache_allocator.h  va_dev_default_allocator.c  va_dev_default_allocator.h  va_gap.c  va_gap.h  (+10 more)
src/ascend_hal/svm/v3/criu/: svm_criu.c  svm_criu.cmake
src/ascend_hal/svm/v3/dbi/: svm_dbi.c  svm_dbi.cmake
src/ascend_hal/svm/v3/inc/: svm_apbi.h  svm_atomic.h  svm_criu.h  svm_dbi.h  svm_event_grp_id.h  svm_flag.h  svm_init_pri.h  svm_log.h  svm_mem_show_cfg.h  svm_pagesize.h  svm_sys_cmd.h  svm_user_adapt.h
src/ascend_hal/svm/v3/mem_pool/: mem_pool.cmake
src/ascend_hal/svm/v3/mem_show_cfg/: svm_mem_show_cfg.c  svm_mem_show_cfg.cmake
src/ascend_hal/svm/v3/op/: svm_op.cmake
src/ascend_hal/svm/v3/query/: svm_query.cmake
src/ascend_hal/svm/v3/share/: svm_share.cmake
src/ascend_hal/svm/v3/sys_cmd/: svm_ioctl.c  svm_ioctl_api.h  svm_mmap.c  svm_mmap.h  svm_sys_cmd.c  svm_sys_cmd.cmake
src/ascend_hal/svm/v3/umc/: svm_umc.cmake  umc_client.c
src/ascend_hal/svm/v3/urma_adapt/: svm_urma_adapt.cmake
src/custom/dev_prod/user/npucli/: CMakeLists.txt
src/custom/network/hccn/hccn_tool/: CMakeLists.txt
src/custom/network/orion/dsmi/: CMakeLists.txt  dsmi_cfg_ops.c  dsmi_network.h  dsmi_network_stub.c  dsmi_optical.h  dsmi_ubping.c
src/network/orion/hccn/host/: CMakeLists.txt
(+3303 files in other folders)
